--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "dependencies": {
     "mysql2": "^2.2.5",
-    "sequelize": "^6.6.2"
+    "pg": "^8.7.1",
+    "postgres": "^1.0.2",
+    "sequelize": "^6.6.5"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
